# os-jisaku

./: .clang-format  .gitignore  README.md  brotli_warning_fix.patch  build-kernel.sh  run_qemu.sh
MikanLoaderPkg/: Common.c  Common.h  LoadKernel.c  LoadKernel.h  Loader.inf  Main.c  MikanLoaderPkg.dsc
kernel/: CMakeLists.txt  compile_commands.json  console.cpp  console.hpp  error.hpp  font.cpp  font.hpp  graphics.cpp  graphics.hpp  interrupt.cpp  interrupt.hpp  kernel_interface_impl.cpp  linker.ld  logger.cpp  logger.hpp  main.cpp  memory_manager.cpp  memory_manager.hpp  memory_map.hpp  newlib_support.cpp  paging.cpp  paging.hpp  pci.cpp  pci.hpp  queue.hpp  sbrk.cpp  sbrk.hpp  segment.cpp  segment.hpp  support_functions.cpp  timer.cpp  timer.hpp  utils.cpp  utils.hpp  window.cpp  window.hpp  x86_descriptor.hpp
kernel/asmfunc/: CMakeLists.txt  asmfunc.hpp  asmfunc.s
kernel/graphics/: buffer_layer.cpp  buffer_layer.hpp  console.cpp  console.hpp  device_pixel_writer.cpp  device_pixel_writer.hpp  font.cpp  font.hpp  frame_buffer.cpp  frame_buffer.hpp  frame_buffer_config.hpp  graphics.cpp  graphics.hpp  group_layer.cpp  group_layer.hpp  layer.cpp  layer.hpp  layer_ids.hpp  layer_manager.cpp  layer_manager.hpp  mouse.cpp  mouse.hpp  painter.cpp  painter.hpp  pixel_color.hpp  pixel_writer.hpp  primitives.hpp  window.cpp  window.hpp
kernel/kernel_interface/: CMakeLists.txt
kernel/kernel_interface/kernel_interface/: logger.hpp  main.hpp
kernel/usb/: CMakeLists.txt  descriptor.hpp  device.cpp  logger.cpp  logger.hpp
kernel/usb/classdriver/: mouse.cpp
kernel/usb/interface/usb/: arraymap.hpp  device.cpp  device.hpp  endpoint.hpp  error.hpp  memory.cpp  memory.hpp  register.hpp
kernel/usb/interface/usb/classdriver/: base.hpp  hid.cpp  hid.hpp  keyboard.cpp  keyboard.hpp  mouse.hpp
kernel/usb/interface/usb/xhci/: context.hpp  device.hpp  devmgr.hpp  port.hpp  registers.cpp  registers.hpp  ring.cpp  ring.hpp  trb.hpp  xhci.cpp  xhci.hpp
kernel/usb/usb/: arraymap.hpp  descriptor.hpp  device.cpp  endpoint.hpp  error.hpp  logger.cpp  register.hpp  setupdata.hpp
kernel/usb/usb/classdriver/: base.cpp  base.hpp  hid.cpp  mouse.cpp  mouse.hpp
kernel/usb/usb/xhci/: device.cpp  device.hpp  devmgr.hpp  speed.hpp  trb.cpp  xhci.cpp  xhci.hpp
kernel/usb/xhci/: device.cpp  devmgr.cpp  port.cpp  speed.hpp  xhci.cpp
stdlib/: build.sh
tools/: makefont.py
